# dbbuddy

./: .gitignore  HYBRID_AI_SETUP.md  LICENSE  Prompt Test Cases After Fix.md  README.md  demo_benchmark.py  demo_queries.py  opencode.json  pyproject.toml  requirements.txt  webAppChanges.md
.hypothesis/tmp/: tmp04ykm6qd  tmp0ceueptw  tmp0fyf55mf  tmp28p_uwhw  tmp2ndwg9dk  tmp3brmglfc  tmp3rlw179k  tmp47rl3zar  tmp4phkatvx  tmp5mnkqyqr  tmp7cieyz0x  tmp9cvrbh_6  tmp9d88qnth  tmp9vmi8gqm  tmpbvkngku0  tmpcb001thk  tmpcsl2xq90  tmpgx6ulel8  tmphvjqmda5  tmpj92hoi3a  tmpkcws5ezz  tmpqkv8mndo  tmprt5ze7e8  tmps0l4hof_  tmps1lfpiv8  tmpsuqmc3oo  tmpv6vdp0_w  tmpwjmoef8w  tmpx7jjagq5  tmpxlxqzifr  tmpzduawzu9  tmpzvmttews
.pytest_cache/: .gitignore
.pytest_cache/v/cache/: lastfailed  nodeids
backend/: main.py
dbbuddy/: __init__.py  __main__.py  db.py  main.py
dbbuddy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dbbuddy/plugins/: __init__.py  base.py  default_mapping.py  loader.py
dbbuddy_core/: __init__.py  ai.py  db.py  explainability.py  mapping.py  models.py  observability.py  pipeline.py  query.py  query_history.py  schema.py
dbbuddy_core/plugins/: default_mapping.py  loader.py
frontend/: vite.config.ts
frontend/src/: styles.css
frontend/src/components/: SemanticGroup.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  input.tsx
frontend/src/routes/: __root.tsx  app.tsx  index.tsx
tests/: test_benchmark.py  test_confidence.py  test_core_targeted.py  test_db.py  test_intent_compiler.py  test_main.py  test_query_pipeline.py  test_relationship_graph.py  test_security.py  test_sql_validator.py  verify_core_queries.py
