[project]
name = "dbbuddy"
version = "0.1.0"
description = "CLI tool for database semantic mapping with AI"
authors = [{name = "Sujal Garje"}]
dependencies = [
    "mysql-connector-python>=8.3.0",
    "requests>=2.31.0"
]

[project.scripts]
dbbuddy = "dbbuddy.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["logs*", "tests*", ".venv*", "__pycache__*", "*.egg-info*"]
