[project]
name = "dbbuddy"
version = "0.1.0"
description = "CLI tool for database semantic mapping with AI"
authors = [{name = "Sujal Garje"}]
dependencies = [
    "mysql-connector-python>=8.3.0",
    "requests>=2.31.0",
    "openai>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "hypothesis>=6.100.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
]

[project.scripts]
dbbuddy = "dbbuddy.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["logs*", "tests*", ".venv*", "__pycache__*", "*.egg-info*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
